--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser-dynamic": "~10.0.2",
     "@angular/router": "~10.0.2",
     "rxjs": "~6.5.5",
+    "simditor": "^2.3.28",
+    "simplemde": "^1.11.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
